--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
    
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
-    <title>Your APP NAME</title>
+    <title>The Board Game Compendium</title>
   </head>
   <body class="container">
     <noscript>You need to enable JavaScript to run this app.</noscript>
